fix visible skip link at 4k res

--- a/src/apps/website/components/header/style.css
+++ b/src/apps/website/components/header/style.css
@@ -73,7 +73,7 @@ header .component-lang_switcher svg {
 
 header .skip-link {
 	position: absolute;
-	top: -30px;
+	top: -100%;
 }
 
 .skip-link:focus-visible {
